# engine-rust

./: Cargo.toml
src/: camera.rs  engine.rs  entity.rs  input.rs  lib.rs  main.rs  renderer.rs  scene.rs  shader.wgsl  shader2.wgsl  texture.rs  window.rs  world.rs
src/crates/asset/: Cargo.toml
src/crates/asset/src/: lib.rs
src/crates/component/: Cargo.toml
src/crates/component/src/: lib.rs  transform.rs
src/crates/component_derive/: Cargo.toml
src/crates/component_derive/src/: lib.rs
