[package]
name = "engine_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = { version = "0.29.10", features = ["serde", "rwh_05"] }
