[package]
name = "engine-rust"
version = "0.1.0"
authors = ["Hayden Sim <https://github.com/hysmio>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
dear-imgui-rs = "0.15.0"
dear-imgui-wgpu = "0.15.0"
dear-imgui-winit = "0.15.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "29.0.3"
winit = { version = "0.30", features = ["android-native-activity"] }
rand = "0.10.1"
asset = { path = "src/crates/asset" }
component = { path = "src/crates/component" }
component_derive = { path = "src/crates/component_derive" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
